fix bug for profile page not showing up when multiple clients in list

--- a/css/style.css
+++ b/css/style.css
@@ -234,8 +234,6 @@ nav {
   color: darkblue;
   font-weight: bold;
   padding: 0 15px;
-  cursor: pointer;
-  cursor: hand;
 }
 
 .messagePost img {
